--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,21 +6,28 @@
   <div class="container menu">
     <ul>
       <li>
-        <span class="material-icons">group</span>
-        <a href=""></a>
-        <a mat-button routerLink="/clients">Clientes</a>
+        <a mat-button routerLink="/clients">
+          <span class="material-icons">group</span>
+          Clientes
+        </a>
       </li>
       <li>
-        <span class="material-icons">inventory</span>
-        Productos
+        <a mat-button routerLink="/products">
+          <span class="material-icons">inventory</span>
+          Productos
+        </a>
       </li>
       <li>
-        <span class="material-icons">description</span>
-        Facturas
+        <a mat-button routerLink="/bill">
+          <span class="material-icons">description</span>
+          Facturas
+        </a>
       </li>
       <li>
-        <span class="material-icons">person</span>
-        Vendedores
+        <a mat-button routerLink="/sellers">
+          <span class="material-icons">person</span>
+          Vendedores
+        </a>
       </li>
     </ul>
   </div>
