feat(table): :sparkles: add row when non exists data

--- a/src/app/components/table/table.component.css
+++ b/src/app/components/table/table.component.css
@@ -18,3 +18,8 @@ table {
 .mat-mdc-table .mat-mdc-header-cell{
     color: #030303;
 }
+
+.containerTable table tr td {
+    text-align: center;
+    padding: 1rem 0;
+}
