--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -6,6 +6,12 @@
       <td mat-cell *matCellDef="let element"> {{ element[column] }} </td>
     </ng-container>
 
+    <tr class="mat-row" *matNoDataRow>
+      <td class="no-data-cell" [attr.colspan]="displayedColumns.length">
+        No hay datos disponibles
+      </td>
+    </tr>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
