feat: :sparkles: create customer

--- a/src/app/components/title/title.component.html
+++ b/src/app/components/title/title.component.html
@@ -6,7 +6,7 @@
     </h5>
   </div>
   <div class="containerBtn">
-    <button mat-button class="btnAdd" >
+    <button mat-button class="btnAdd" (click)="onButtonClick()" >
       <span class="material-symbols-outlined">
         add_circle
       </span>
